crates/reinhardt-db-macros/tests/ui/fail/missing_primary_key.rs
use reinhardt_db_macros::document;

#[document(collection = "users", backend = "mongodb")]
struct User {
    name: String,
}

fn main() {}
